pov-check-health (0.10.1) UNRELEASED; urgency=medium

  * checkinodes: handle non-existent filesystems (GH #14).

 -- Marius Gedminas <marius@gedmin.as>  Mon, 16 Nov 2015 09:19:53 +0200

pov-check-health (0.10.0) precise; urgency=medium

  * check-health, check-web-health, check-ssl-health:
    - -h now explains the meanings of the options,
    - new option -c to force colorization of errors,
    - refactored the shared command-line parsing code into a new helper
      library (cmdline.sh).
  * Makefile: create generated files in build/ to avoid clutter.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 11 Nov 2015 12:08:14 +0200

pov-check-health (0.9.2) precise; urgency=medium

  * checkram: include buffers/cache in free memory calculation (GH #13).

 -- Marius Gedminas <marius@gedmin.as>  Wed, 04 Nov 2015 10:22:12 +0200

pov-check-health (0.9.1) precise; urgency=medium

  * check-ssl-certs: you can set CHECKCERT_WARN_BEFORE=n to change the default
    number of days before a warning is produced.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 11 Sep 2015 08:27:34 +0300

pov-check-health (0.9.0) precise; urgency=medium

  * Fixed most shellcheck warnings.  This should've improved reliablility
    (especially if you have file or directory names with spaces in them), but
    might've introduced bugs.
  * New checks: checkcert, checkcert_imaps, checkcert_ssmtp.
  * New script: check-ssl-certs.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 19 Aug 2015 10:44:21 +0300

pov-check-health (0.8.3) precise; urgency=medium

  * check-health -g: require 1G free disk space for partitions that have more
    than 1G free.

 -- Marius Gedminas <marius@gedmin.as>  Tue, 21 Apr 2015 13:20:15 +0300

pov-check-health (0.8.2) precise; urgency=medium

  * checkpidfile: handle multiple PIDs in one file (GH #4).

 -- Marius Gedminas <marius@gedmin.as>  Fri, 27 Mar 2015 10:50:07 +0200

pov-check-health (0.8.1) precise; urgency=medium

  * New check: checkweb_auth.
