@@ -531,7 +531,7 @@ checkweb_auth() {
 # checkcert <hostname> [<days>]
 #   Check if the SSL certificate of a website is close to expiration.
 #
-#   <days> defaults to $CHECKCERT_WARN_BEFORE, and if that's not specified, 60.
+#   <days> defaults to $CHECKCERT_WARN_BEFORE, and if that's not specified, 30.
 #
 #   Example: checkcert www.example.com
 #
@@ -539,7 +539,7 @@ checkweb_auth() {
 checkcert() {
     info_check checkcert "$@"
     local server="$1"
-    local days="${2:-${CHECKCERT_WARN_BEFORE:-60}}"
+    local days="${2:-${CHECKCERT_WARN_BEFORE:-30}}"
     local output="$(/usr/lib/nagios/plugins/check_http -C "$days" -H "$server" --sni 2>&1)"
     case "$output" in
         OK\ *)
@@ -555,7 +555,7 @@ checkcert() {
 # checkcert_ssmtp <hostname> [<days>]
 #   Check if the SSL certificate of an SSMTP server is close to expiration.
 #
-#   <days> defaults to $CHECKCERT_WARN_BEFORE, and if that's not specified, 60.
+#   <days> defaults to $CHECKCERT_WARN_BEFORE, and if that's not specified, 30.
 #
 #   Example: checkcert_ssmtp mail.example.com
 #
@@ -563,7 +563,7 @@ checkcert() {
 checkcert_ssmtp() {
     info_check checkcert_ssmtp "$@"
     local server="$1"
-    local days="${2:-${CHECKCERT_WARN_BEFORE:-60}}"
+    local days="${2:-${CHECKCERT_WARN_BEFORE:-30}}"
     local output="$(/usr/lib/nagios/plugins/check_ssmtp -D "$days" -H "$server" -p 465 --ssl 2>&1)"
     case "$output" in
         OK\ *)
@@ -579,7 +579,7 @@ checkcert_ssmtp() {
 # checkcert_imaps <hostname> [<days>]
 #   Check if the SSL certificate of an IMAPS server is close to expiration.
 #
-#   <days> defaults to $CHECKCERT_WARN_BEFORE, and if that's not specified, 60.
+#   <days> defaults to $CHECKCERT_WARN_BEFORE, and if that's not specified, 30.
 #
 #   Example: checkcert_imaps mail.example.com
 #
@@ -587,7 +587,7 @@ checkcert_ssmtp() {
 checkcert_imaps() {
     info_check checkcert_imaps "$@"
     local server="$1"
-    local days="${2:-${CHECKCERT_WARN_BEFORE:-60}}"
+    local days="${2:-${CHECKCERT_WARN_BEFORE:-30}}"
     local output="$(/usr/lib/nagios/plugins/check_imap -D "$days" -H "$server" -p 993 --ssl 2>&1)"
     case "$output" in
         OK\ *)
