@@ -1,6 +1,7 @@
 pov-check-health (0.10.1) UNRELEASED; urgency=medium
 
   * checkinodes: handle non-existent filesystems (GH #14).
+  * checkcert et al: reduce the default number of days before a warning to 30.
 
  -- Marius Gedminas <marius@gedmin.as>  Mon, 16 Nov 2015 09:19:53 +0200
 
